<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="testapp.justcleanassessment.domain.CommentsItems" />

        <variable
            name="clickListener"
            type="testapp.justcleanassessment.views.comments.ClickListener" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="0dp"
        app:strokeColor="@color/cardview_shadow_start_color"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_postId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{Integer.toString(data.postId)}"
                tools:text="@string/postid" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{Integer.toString(data.id)}"
                tools:text="@string/id" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{data.name}"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{data.email}"
                tools:text="@string/email" />

            <TextView
                android:id="@+id/tv_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{data.body}"
                tools:text="@string/body" />

            <Button
                android:id="@+id/btn_addtofavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> clickListener.onbuttonClick(data)}"
                android:text="@string/addtofavorites" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>